Fix navbar buttons vertical align

--- a/src/sass/navbar.sass
+++ b/src/sass/navbar.sass
@@ -31,6 +31,8 @@
   padding-left: 40px;
   padding-right: 40px;
 
+.nav-left, .nav-right
+  padding-top: 3px !important
 .nav-title
   font-size: 1.4em
   font-family: 'Dax Wide Regular', sans-serif
